# sdg_group_metadata_driven_transfos

./: .gitignore  Makefile  README.md  copilot_prompts.txt  docker-compose.yaml  main.py  metadata.json  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: metadata_driven_transfos_dag.py
data/historic/load_date=2026-06-27 00:00:00/: data.parquet
data/output/: last.parquet  warehouse.duckdb
data/output/historic/load_date=2026-06-27 00:00:00/: data.parquet
source/: input_handler.py  metadata_driven_transfos.py  output_handler.py  table_output_writer.py  transfo_handler.py
source/output/: output_handler.py
source/output/writers/: file_output_writer.py
source/transfo/: transfo_handler.py
source/transfo/transfo_catalog/: add_fields_transformation.py  filter_transformation.py  group_transformation.py
tests/: test_population_data.py
