[tool.poetry]
name = "sdg-tech-test"
version = "0.1.0"
description = "SDG Tech Test project"
authors = ["borjaasir@egmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas= "2.3.3"
pyarrow = "24.0.0"
fastparquet = "2026.5.0"

[tool.poetry.dev-dependencies]
pytest = "9.1.1"
apache-airflow = "3.2.2"